background img distortion correction

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -18,9 +18,9 @@ body.cronix {
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 1.5) {
-  .sidebar {
+  /*.sidebar {*/
     width: 500px; }
-  }
+  /*}*/
 
 body.law {
   /*background: url("http://brazilianxd.com/wp-content/uploads/2014/01/galaxy17.jpg") no-repeat center center fixed;*/
